fixed some footer spacing (organized divs)

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ a {
     text-decoration: none;
     margin: 5px;
     color: black;
+    font-size: 14px;
 }
 
 a:hover {
@@ -165,8 +166,15 @@ footer {
     width: 100%;
     background-color: rgb(242, 242, 242);
     justify-content: space-between;
+    align-items: center;
 }
 
 footer a{
     color: rgb(112, 117, 122);
+    padding: 10px;
+}
+
+.footer-links {
+    display: flex;
+    justify-content: space-between;
 }
